# pcts_entitlements

pcts_entitlements/: Makefile  README.md  clean.py  pyproject.toml  requirements.txt
pcts_entitlements/data/raw/: dbo.dwelling_units_case_12_2025.parquet  dbo.dwelling_units_detail_12_2025.parquet
pcts_entitlements/docs/: mkdocs.yml
pcts_entitlements/docs/docs/: index.md
pcts_entitlements/notebooks/: README.md  explore_pcts.ipynb
pcts_entitlements/pcts_entitlements/: __init__.py  config.py  dataset.py
pcts_entitlements/pcts_entitlements/data_util/: __init__.py  load_pcts.py
