[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pcts_entitlements"
version = "0.0.1"
description = "Analysis and modelling of PCTS entitlement data"
authors = [
  { name = "Grace Bryant (PMU)" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.11.0"


[tool.ruff]
line-length = 99
src = ["pcts_entitlements"]
include = ["pyproject.toml", "pcts_entitlements/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["pcts_entitlements"]
force-sort-within-sections = true

